# realproject

./: .dockerignore  .gitignore  Dockerfile  Grader.py  LICENSE  README.md  app.py  client.py  dataset.json  grader.py  inference.py  openenv.yaml  pyproject.toml  readme.txt  requirements.txt  validate-submission.sh
server/: app.py  environment.py  main.py  models.py
